--- a/src/assets/sass/elements/site-header.sass
+++ b/src/assets/sass/elements/site-header.sass
@@ -41,9 +41,11 @@
 
 .navbar-item-social
 	padding: 0.3rem 0.55rem !important
+	transition: background-color 0.2s ease
 
 	.svg-inline--fa
 		font-size: 1rem !important
+		transition: color 0.2s ease
 
 @media screen and (max-width: 1023px)
 	.navbar-burger
