--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -108,5 +108,8 @@ code
 	border: 2px solid $dark-blue
 
 .navbar-item-social:hover
-	background-color: $dark-blue !important
+	background-color: rgba(255, 255, 255, 0.15) !important
+
+	.svg-inline--fa
+		color: #fff !important
 
